<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinaldy.snookertracker.SetUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:orientation="horizontal"
        android:id="@+id/layout_players">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:text="@string/play_players"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/radio_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/play_radio_2p"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/play_radio_2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="25dp"
                android:paddingStart="5dp"
                android:onClick="onRadioButtonClick"
                android:text="@string/play_radio_2p" />

            <RadioButton
                android:id="@+id/play_radio_4p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="25dp"
                android:paddingStart="5dp"
                android:onClick="onRadioButtonClick"
                android:text="@string/play_radio_4p" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_players"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_team_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/team_1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/play_hint_team_1"
                android:text="@string/play_hint_team_1" />

            <EditText
                android:id="@+id/player_1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/play_hint_player_1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_team_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/team_2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/play_hint_team_2"
                android:inputType="textPersonName"
                android:text="@string/play_hint_team_2" />

            <EditText
                android:id="@+id/player_2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/play_hint_player_2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="end"
            android:onClick="onResetClick"
            android:text="@string/play_reset"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:onClick="onStartClick"
            android:text="@string/play_start"/>
    </LinearLayout>

</RelativeLayout>
